# genshen-bot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
app/: bootstrap.py  chat_log.py  config.py  errors.py  event_model.py  http.py  plugin.py  router.py  runtime.py
app/adapters/: __init__.py  onebot.py
app/data/: __init__.py  bosses.json  characters.json
app/llm/: __init__.py  context.py  tracker.py
app/plugins/: chat.py  chat_log_admin.py  echo.py  genshin.py  help.py  llm_refresh.py  null.py  ping.py  staticdata.py
app/providers/hoyolab/: __init__.py  provider.py
app/providers/staticdata/: __init__.py  models.py  provider.py
app/session/: __init__.py
app/signals/: __init__.py  hard.py  post.py  soft.py
app/storage/: sqlite.py
configs/: dev.json
docs/architecture/: qq-ai-bot-v1-module-breakdown.md
napcat/config/: onebot11.json  onebot11_2802469845.json  webui.json
tests/: conftest.py  test_application.py  test_chat_plugin.py  test_event_model.py  test_hoyolab_auth.py  test_llm_config.py  test_llm_tracker.py  test_onebot.py  test_plugin.py  test_plugins.py  test_plugins_staticdata.py  test_providers_staticdata.py  test_router.py  test_session.py  test_signals.py
tools/: generate_data.py
